[CDS-86007]: changing the logic how traffic routing resource are being named